# aoc2020

./: CMakeLists.txt
include/aoc2020/input/: reader.h
src/input/: reader.cpp
src/puzzle/: day10a.cpp  day10b.cpp  day11a.cpp  day11b.cpp  day1a.cpp  day1b.cpp  day2a.cpp  day2b.cpp  day3a.cpp  day3b.cpp  day4a.cpp  day4b.cpp  day5a.cpp  day5b.cpp  day6a.cpp  day6b.cpp  day8a.cpp  day8b.cpp  day9a.cpp  day9b.cpp
